Correction and dark mode

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@ html {
 body {
   font-family: var(--body-font);
   background-color: var(--white-color);
-  color: var(--black-color);
+  /* color: var(--black-color); */
 }
 
 ul {
@@ -64,5 +64,5 @@ a {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--white-gray);
+  background-color: rgb(190, 190, 190);
 }
