--- a/client/src/components/Register/register.css
+++ b/client/src/components/Register/register.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  background-color: #fff7f7;
+  background-color: var(--loginbg);
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -45,7 +45,8 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  background-color: #fff;
+  background-color: var(--white-color);
+  color: var(--black-color);
 }
 .right__inner {
   display: flex;
@@ -58,7 +59,7 @@
   text-align: center;
 }
 .right__top h3 {
-  color: #000;
+  color: var(--black-color);
   font-family: Poppins;
   font-size: 24px;
   font-style: normal;
@@ -119,15 +120,15 @@ form {
   flex-direction: column;
 }
 #input__field label {
-  color: #000;
+  color: var(--black-color);
   font-size: 0.8rem;
   font-weight: 500;
 }
 #input__field input {
   padding: 0.5rem;
   border-radius: 5px;
-  border: 1px solid #f0f0f0;
-  background-color: rgba(255, 255, 255, 0.5);
+  border: 1px solid gray;
+  background-color: var(--white-color);
   -webkit-backdrop-filter: blur(30px);
   backdrop-filter: blur(30px);
 }
@@ -140,14 +141,14 @@ form {
   align-items: center;
   font-size: 0.7rem;
   font-weight: 700;
-  color: #000;
+  color: var(--black-color);
   gap: 0.5rem;
 }
 #terms input {
   width: 17px;
   height: 17px;
   border: 1px solid #b8b8b8;
-  background: #fff;
+  background: var(--white-color);
   cursor: pointer;
 }
 #submit__btn {
@@ -158,7 +159,7 @@ form {
   color: #fff;
   font-size: 0.9rem;
   font-weight: 600;
-  background: #ff4f5a;
+  background: var(--red-color);
   background-size: 200% 100%;
   background-position: right bottom;
   transition: all 0.5s ease-out;
@@ -170,12 +171,12 @@ form {
 }
 
 #redirect {
-  color: #000;
+  color: var(--black-color);
   font-size: 0.9rem;
   font-weight: 500;
 }
 #redirect a {
-  background: #ff4f5a;
+  background: var(--red-color);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -190,6 +191,9 @@ form {
 @media screen and (max-width: 375px) {
   .right__inner {
     width: 300px;
+  }
+  #submit__btn {
+    background-color: var(--red-color);
   }
 }
 
@@ -234,7 +238,7 @@ form {
   .right__inner {
     padding: 2rem;
     border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: var(--white-color);
     border-radius: 20px;
     -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
@@ -242,8 +246,8 @@ form {
   #input__field input {
     padding: 0.5rem;
     border-radius: 5px;
-    border: 1px solid #f0f0f0;
-    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid var(--black-color);
+    background-color: var(--white-color);
     -webkit-backdrop-filter: blur(30px);
     backdrop-filter: blur(30px);
   }
